# auto-doc-streamlit

./: .dockerignore  .env.example  .gitignore  .zshrc_auto_doc  53ai_articles_20250822_134002.csv  CSV_MIGRATION_SUMMARY.md  Dockerfile  Dockerfile.fastapi  FEATURE_SUMMARY.md  README.md  activate_env.sh  as_demo1.py  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  homepage.py  install_icons.sh  preview_templates.py  project.env  pyproject.toml  requirements.txt  result.html  result.xls  simple_paths.py  start.sh  start_app.py  start_project.sh  test_list_fix.py  test_syntax_highlight.html  zimu.srt  开源准备分析报告.md
.streamlit/: config.toml
analyse/: demo1.ipynb  new_df.csv  reads_analysis.py  阅读量与字数.ipynb
api/: __init__.py  main.py
app/: README_web2md.md  __init__.py  channel_publish_history.json  channels.json  cookies_config.json  enhanced_web2md.py  gzh_url2md.py  info_sources.json  language_manager.py  llm_endpoints.json  main_app.py  md_transcribe_history.json  md_utils.py  navigation_manager.py  path_manager.py  review_ui.py  static  template_info.json  tokens_config.json  utils.py  web2md.py
backups/: tokens_config_backup_20250820_101551.json
config/: channels_v3.example.json  channels_v3.json  cookies_config.example.json  cookies_config.json  image_beds.example.json  image_beds.json  info_sources.json  llm_endpoints.example.json  llm_endpoints.json  md_transcribe_history.json  template_info.json  tokens_config.example.json  tokens_config.json
core/: README.md
cursor_writer/: 超级麦吉：业务版Cursor的AI生产力革命.md
docs/: ARTICLE_ANNOTATION_SYSTEM.md  (+14 more)
(+1744 files in other folders)
