[project]
name = "auto-doc"
version = "0.2.0"
description = "基于Streamlit的AI内容创作与分发平台，无需后端，支持多模型、多模板、网页转写、MD审核等功能。"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.20.0",
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "markdown>=3.3.0",
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "bs4>=0.0.2",
    "markdownify>=1.1.0",
    "plotly>=6.2.0",
    "xlrd>=2.0.2",
    "openpyxl>=3.1.5",
    "tabulate>=0.9.0",
    "playwright",
    "markdown2>=2.5.1",
    "pygments>=2.19.2",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "lxml>=6.0.1",
    "pytest-playwright>=0.5.2",
    "python-dotenv>=1.0.0",
] 
